Fixed cmake rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,25 +7,26 @@
 
 PROJECT(minc-widgets)
 
-
-INSTALL(PROGRAMS
-   ecat2hdf5
-   gennlxfm
-   img2mnc
-   mincbigaverage
-   mincnorm
-   nlpfit
-   volalign
-   volcentre
-   volextents
-   volflip
-   voliso
-   volmash
-   volpad
-   volrot
-   volsymm
-   xfmavg
-   xfmdecomp
-   xfmflip
-   DESTINATION bin )
+INSTALL(PROGRAMS ecat2hdf5/ecat2hdf5
+    gennlxfm/gennlxfm
+    img2mnc/img2mnc
+    mincbigaverage/mincbigaverage
+    mincnorm/mincnorm
+    nlpfit/nlpfit
+    volalign/volalign
+    volcentre/volcentre
+    volextents/volextents
+    volflip/volflip
+    voliso/voliso
+    volmash/volmash
+    volpad/volpad
+    volrot/volrot
+    volsymm/volsymm
+    xfmavg/xfmavg
+    xfmdecomp/xfmdecomp
+    xfmflip/xfmflip
+  PERMISSIONS
+    OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ  WORLD_EXECUTE WORLD_READ
+  DESTINATION
+    bin )
 
